# project_1

./: package-lock.json  pyproject.toml  vite.config.js
backend/: app.py
frontend-vite/: .gitignore  index.html  package-lock.json  package.json  style.css
frontend-vite/src/: main.js
